change url in ci.yml to my domain

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
               listPerPage: 10,
             },
             factory: {
-              url: 'https://pizza-factory.cs329.click',
+              url: 'https://pizza-factory-mrm-franchise.click', 
               apiKey: '${{ secrets.FACTORY_API_KEY }}',
             },
           };" > src/config.js
@@ -71,4 +71,6 @@ jobs:
         run: |
           coverage=$(jq '.total.lines.pct' coverage/coverage-summary.json)
           color=$(echo "$coverage < 80" | bc | awk '{if ($1) print "red"; else print "green"}')
-          curl -s -X POST "https://pizza-factory.cs329.click/api/badge/${{ secrets.NET_ID }}/jwtpizzaservicecoverage?label=Coverage&value=$coverage%25&color=$color" -H "authorization: bearer ${{ secrets.FACTORY_API_KEY }}"
+          curl -s -X POST "https://pizza-factory-mrm-franchise.click/api/badge/${{ secrets.NET_ID }}/jwtpizzaservicecoverage?label=Coverage&value=$coverage%25&color=$color" -H "authorization: bearer ${{ secrets.FACTORY_API_KEY }}"
+
+# old factory url:   https://pizza-factory.cs329.click
